fixing footer causing horizontal scroll & cart page product quantity

--- a/assets/footer.css
+++ b/assets/footer.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 
 }
 .footer_container{
@@ -11,10 +11,12 @@
 .row{
     display: flex;
     flex-wrap: wrap;
+    padding: 0px;
+    margin: 0px;
 }
 .footer{
     background-color: #2b3a55;
-    padding: 40px 0 ;
+    padding: 40px 0px ;
 }
 .footer-col{
     width: 25%;
